--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -26,3 +27,16 @@
 .article-body > blockquote {
     @apply relative p-4 border-l-4 border-red-700 dark:bg-gray-300 dark:bg-opacity-40 mb-4
 }
+
+/*.main-container {*/
+
+/*    width: fit-content;*/
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
+/*}*/
+
+/*.ck-content {*/
+
+/*    line-height: 1.6;*/
+/*    word-break: break-word;*/
+/*}*/
