--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,18 @@
     @apply relative p-4 border-l-4 border-red-700 dark:bg-gray-300 dark:bg-opacity-40 mb-4
 }
 
+.editor-content > p {
+    @apply mb-5 text-gray-800
+}
+
+.editor-content > h1 {
+    @apply my-5 text-2xl text-gray-600
+}
+
+.editor-content  > blockquote {
+    @apply relative p-4 border-l-4 border-red-700 dark:bg-gray-300 dark:bg-opacity-40 mb-4
+}
+
 /*.main-container {*/
 
 /*    width: fit-content;*/
